--- a/Laptop/config/wofi/style.css
+++ b/Laptop/config/wofi/style.css
@@ -14,7 +14,8 @@
  window {
     margin: 0px;
     padding: 0px;
-    border: 20px solid @accent;
+    border: 1px solid @accent;
+		border-color: @accent;
 		background-color: rgba(36, 39, 58, 0.9);
     /*border-radius: 0px;*/
     /*animation: slideIn 0.5s ease-in-out both;*/
