--- a/Laptop/config/waybar/style.css
+++ b/Laptop/config/waybar/style.css
@@ -54,7 +54,7 @@ window#waybar.chromium {
 
 button {
     /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 2px transparent;
+    /*box-shadow: inset 0 2px transparent;*/
     /* Avoid rounded borders under each button name */
     border: none;
     border-radius: 0;
@@ -82,27 +82,28 @@ button:hover {
 
 #workspaces button.flat.active {
     font-size: 14px;
-    /*color: #ED8796;*/
+    color: #ED8796;
     font-weight: bolder;
-    box-shadow: inset 0 -2px #ffffff;
+    /*box-shadow: inset 0 -2px #ffffff;*/
 }
 
 #workspaces button.active{
     font-size: 14px;
     /*color: #ED8796;*/
     font-weight: bolder;
-    box-shadow: inset 0 -2px #ffffff;
+    /*box-shadow: inset 0 -2px #ffffff;*/
 }
 
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background-color: #1E2031;
+    /*background: rgba(0, 0, 0, 0.2);*/
 }
 
 
 #workspaces button.focused{
     background-color: #1E2031;
-    box-shadow: inset 0 -3px #ffffff;
+    /*box-shadow: inset 0 -3px #ffffff;*/
 }
 
 #workspaces button.urgent {
